@@ -1,7 +1,8 @@
 # Offpunk History
 
 ## 2.1 - Unreleased
-- ansicat: freshly updated gemtext/rss links are highlighted ("new_link" theme option)
+- freshly updated gemtext/rss links are highlighted ("new_link" theme option)
+- redirections is now reflected in links and the cache (bug #28)
 - ansicat: added "--mode" option
 - ansicat: avoid a crash when urllib.parse.urljoin fails
 - Fix a crash when gus is called without parameters (Von Hohenheiden)
